objects/Geography__c.object
<CustomObject>
    <description>Represents the Vinyard that a wine is from. Used to help determine the State, Country, and Appellation of a Wine item.</description>
    <fields>
        <fullName>Appellation_Text__c</fullName>
        <label>Appellation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Appellation__c</fullName>
        <label>Code: Appellation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Country__c</fullName>
        <label>Code: Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Region__c</fullName>
        <label>Code: Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Sub_Region__c</fullName>
        <label>Code: Sub Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Vineyard__c</fullName>
        <label>Code: Vineyard</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_of_Origin__c</fullName>
        <label>Country of Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geography_Leaf_ExtID__c</fullName>
        <externalId>true</externalId>
        <label>Geography Leaf ExtID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Region_of_Origin__c</fullName>
        <label>State/Region of Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <label>Sub Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TXPID__c</fullName>
        <label>TXPID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vineyard_Domaine__c</fullName>
        <description>Name of the Vineyard or Domaine associated with this Geography</description>
        <inlineHelpText>Name of the Vineyard or Domaine associated with this Geography</inlineHelpText>
        <label>Vineyard / Domaine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Geography</label>
    <nameField>
        <label>Geography Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geographies</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>